Fix slight overflow, add Pagination

--- a/frontend/src/Components/Search/SearchResult/styles/PageSearchResult.css
+++ b/frontend/src/Components/Search/SearchResult/styles/PageSearchResult.css
@@ -27,6 +27,12 @@
     margin-bottom: 2vh;
 }
 
+.wrapper-2 {
+    display: flex;
+    flex: 1;
+}
+
+
 .page-search-result .abstract-view {
     display: flex;
     flex-direction: column;
