--- a/frontend/src/Components/Search/SearchResult/styles/SearchResultList.css
+++ b/frontend/src/Components/Search/SearchResult/styles/SearchResultList.css
@@ -16,3 +16,13 @@
     border-left: 0.4vw outset #61847D33;
 }
 
+#test {
+    align-self: center;
+    border-bottom: 3px solid #96d4bc;
+    margin-bottom: 20px;
+}
+
+#test .rs-pagination-btn-active > a {
+    color: #96d4bc;
+}
+
